Update index.html: added new file

--- a/index.html
+++ b/index.html
@@ -260,6 +260,12 @@
             <a href="https://mega.nz/file/UwgVAABR#ffcVU4_cJtHYMaBjIPw-LnWts9uK05YR4pQ4JwSID9g" class="download-button">Download .zip</a>
         </div>
 
+        <div class="download-section">
+            <h2 class="download-title">Download Another Program</h2>
+            <p class="download-description">Check out this other program I've created. Click below to download.</p>
+            <a href="https://mega.nz/file/wtZGiDBT#V6uNkMWPPM1Qf7bOYXw9fPMQ5OTZXTyyu2JAcDtLj7E" class="download-button">Download Now</a>
+        </div>
+
         <div class="developer-team">
             <h2 class="developer-team-title">Developer Team</h2>
             <div class="developer-info">
