--- a/index.html
+++ b/index.html
@@ -257,13 +257,13 @@
         <div class="download-section">
             <h2 class="download-title">Loadstone pre-alpha</h2>
             <p class="download-description">Click the button below to download the latest version of my Loadstone.  ->  [MEGA]</p>
-            <a href="https://mega.nz/file/UwgVAABR#ffcVU4_cJtHYMaBjIPw-LnWts9uK05YR4pQ4JwSID9g" class="download-button">Download .zip</a>
+            <a href="https://mega.nz/file/UwgVAABR#ffcVU4_cJtHYMaBjIPw-LnWts9uK05YR4pQ4JwSID9g" class="download-button">Download [.zip]</a>
         </div>
 
         <div class="download-section">
-            <h2 class="download-title">Download Another Program</h2>
-            <p class="download-description">Check out this other program I've created. Click below to download.</p>
-            <a href="https://mega.nz/file/wtZGiDBT#V6uNkMWPPM1Qf7bOYXw9fPMQ5OTZXTyyu2JAcDtLj7E" class="download-button">Download Now</a>
+            <h2 class="download-title">LeakyLeaky-Rebirth</h2>
+            <p class="download-description">Remake of the LeakyLeaky project by Nerds Inc. !!EDUCATIONAL PURPOSE ONLY!!</p>
+            <a href="https://mega.nz/file/wtZGiDBT#V6uNkMWPPM1Qf7bOYXw9fPMQ5OTZXTyyu2JAcDtLj7E" class="download-button">Download [.zip]</a>
         </div>
 
         <div class="developer-team">
