Update index.html Fixed

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
     <main>
         <div class="download-section">
             <h2 class="download-title">Loadstone pre-alpha</h2>
-            <p class="download-description">Click the button below to download the latest version of my Loadstone.  ->  [MEGA]</p>
+            <p class="download-description">Simple DDoS tool, read README.md. Click the button below to download the latest version of my Loadstone.  ->  [MEGA]</p>
             <a href="https://mega.nz/file/UwgVAABR#ffcVU4_cJtHYMaBjIPw-LnWts9uK05YR4pQ4JwSID9g" class="download-button">Download [.zip]</a>
         </div>
 
